# ai-knowledge-assistant-agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: ui.py
core/: agent.py  llm.py  logger.py  memory.py  tools.py
